--- a/src/main/resources/com/example/gestioncite_universitaire/hello-view.fxml
+++ b/src/main/resources/com/example/gestioncite_universitaire/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
@@ -13,4 +14,6 @@
 
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
+
+    <ToggleButton text="Mode Sombre" onAction="#onToggleThemeButtonClick"/>
 </VBox>
