--- a/src/main/resources/com/example/gestioncite_universitaire/hello-view.fxml
+++ b/src/main/resources/com/example/gestioncite_universitaire/hello-view.fxml
@@ -1,19 +1,122 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.gestioncite_universitaire.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-
-    <ToggleButton text="Mode Sombre" onAction="#onToggleThemeButtonClick"/>
+<VBox alignment="CENTER_LEFT" style="-fx-background-color: ededed;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestioncite_universitaire.HelloController">
+   <children>
+      <HBox alignment="CENTER" spacing="5.0" style="-fx-background-color: ededed;">
+         <children>
+            <VBox alignment="TOP_CENTER" spacing="15.0" style="-fx-background-color: ededed;">
+               <children>
+                  <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+                     <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@img/Home.png" />
+                        </image>
+                     </ImageView>
+                  </StackPane>
+                  <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+                     <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@img/Bed.png" />
+                        </image>
+                     </ImageView>
+                  </StackPane>
+                  <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+                     <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@img/MoneyBag.png" />
+                        </image>
+                     </ImageView>
+                  </StackPane>
+                  <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+                     <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@img/GraduationCap.png" />
+                        </image>
+                     </ImageView>
+                  </StackPane>
+               </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="18.0" />
+               </padding>
+            </VBox>
+            <VBox alignment="CENTER" spacing="10.0" style="-fx-background-color: ffffff; -fx-background-radius: 20;">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="94.0" prefWidth="522.0" spacing="10.0" style="-fx-background-color: ffffff;">
+                     <padding>
+                        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+                     </padding>
+                     <children>
+                        <ImageView fitHeight="75.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/télécharger-removebg-preview.png" />
+                           </image>
+                        </ImageView>
+                        <VBox alignment="CENTER" prefHeight="67.0" prefWidth="330.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Université De Yaoundé 1">
+                                 <font>
+                                    <Font name="System Bold" size="19.0" />
+                                 </font>
+                              </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gestion De La Cité Universitaire">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="La Réservation En Toute Simplicité" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="26.0" prefWidth="522.0" spacing="8.0">
+                     <children>
+                        <VBox alignment="CENTER" prefHeight="26.0" prefWidth="254.0" style="-fx-background-color: ededed; -fx-background-radius: 10;">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="230 Etudiants" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="26.0" prefWidth="254.0" style="-fx-background-color: ededed; -fx-background-radius: 10;">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="130 Chambres disponibles" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER" prefHeight="26.0" prefWidth="254.0" style="-fx-background-color: ededed; -fx-background-radius: 10;">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="27 Chambres libres" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="200.0" prefWidth="535.0" spacing="14.0">
+                     <padding>
+                        <Insets top="10.0" />
+                     </padding>
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="186.0" prefWidth="169.0" style="-fx-background-color: d8f2fa; -fx-background-radius: 15;" text="Etat Des Chambres" />
+                        <Button mnemonicParsing="false" prefHeight="190.0" prefWidth="171.0" style="-fx-background-color: eeeeff; -fx-background-radius: 15;" text="Chiffres D'Affaires" />
+                        <Button mnemonicParsing="false" prefHeight="202.0" prefWidth="173.0" style="-fx-background-color: d0ded9; -fx-background-radius: 15;" text="Etat Des Residents" />
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </HBox>
+   </children>
 </VBox>
