--- a/src/main/resources/com/example/gestioncite_universitaire/hello-view.fxml
+++ b/src/main/resources/com/example/gestioncite_universitaire/hello-view.fxml
@@ -16,7 +16,7 @@
          <children>
             <VBox alignment="TOP_CENTER" spacing="15.0" style="-fx-background-color: ededed;">
                <children>
-                  <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+                  <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;" onMouseClicked="#handleHomeClick">
                      <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                         <image>
                            <Image url="@img/Home.png" />
