--- a/src/main/resources/com/example/gestioncite_universitaire/listeChambre.fxml
+++ b/src/main/resources/com/example/gestioncite_universitaire/listeChambre.fxml
@@ -1,14 +1,179 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.gestioncite_universitaire.ListeChambre"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="5.0" style="-fx-background-color: ededed;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gestioncite_universitaire.HelloController">
+   <children>
+      <VBox alignment="TOP_CENTER" spacing="15.0" style="-fx-background-color: ededed;">
+         <children>
+            <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;" onMouseClicked="#handleHomeClick">
+               <children>
+                  <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/Home.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+               <children>
+                  <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/Bed.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+               <children>
+                  <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/MoneyBag.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+            <StackPane prefHeight="19.0" prefWidth="19.0" style="-fx-background-color: white; -fx-background-radius: 50%;">
+               <children>
+                  <ImageView fitHeight="19.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/GraduationCap.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </StackPane>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="18.0" />
+         </padding>
+      </VBox>
+      <VBox alignment="CENTER" spacing="10.0" style="-fx-background-color: ededed; -fx-background-radius: 20;">
+         <children>
+            <HBox alignment="CENTER_LEFT" prefHeight="33.0" prefWidth="527.0" spacing="10.0" style="-fx-background-color: ffffff; -fx-background-radius: 20;">
+               <padding>
+                  <Insets bottom="6.0" left="20.0" right="6.0" top="6.0" />
+               </padding>
+               <children>
+                  <ImageView fitHeight="37.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/Bed.png" />
+                     </image>
+                  </ImageView>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Listes Des Chambres" wrappingWidth="265.33672523498535">
+                     <font>
+                        <Font name="System Bold" size="21.0" />
+                     </font>
+                  </Text>
+               </children>
+            </HBox>
+            <VBox alignment="TOP_CENTER" prefHeight="314.0" prefWidth="526.0" spacing="5.0" style="-fx-background-color: ffffff; -fx-background-radius: 20;">
+               <children>
+                  <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="29.0" prefWidth="507.0" spacing="3.0" style="-fx-background-color: ededed; -fx-background-radius: 20;">
+                     <children>
+                        <ImageView fitHeight="20.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/search.png" />
+                           </image>
+                        </ImageView>
+                        <TextField prefHeight="26.0" prefWidth="453.0" promptText="Chercher une chambre" style="-fx-background-color: ededed;" />
+                        <ImageView fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/tri.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                     <padding>
+                        <Insets bottom="3.0" left="5.0" right="5.0" top="3.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="29.0" prefWidth="507.0" style="-fx-background-color: ededed; -fx-background-radius: 20;">
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="20.0" prefWidth="85.0" style="-fx-background-color: ffffff; -fx-background-radius: 10;">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Bâtiment X" textAlignment="JUSTIFY">
+                                 <font>
+                                    <Font name="System Bold" size="10.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="3.0" left="5.0" right="5.0" top="3.0" />
+                     </padding>
+                  </HBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="212.0" prefWidth="507.0" spacing="7.0">
+                     <children>
+                        <HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="61.0" prefWidth="507.0" spacing="5.0" style="-fx-background-color: ffffff; -fx-background-radius: 10; -fx-border-color: ededed; -fx-border-width: 1; -fx-border-radius: 10;">
+                        <children>
+                              <VBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="272.0">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Chambre XX">
+                                       <font>
+                                          <Font name="System Bold" size="15.0" />
+                                       </font>
+                                    </Text>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Bâtiment X">
+                                       <font>
+                                          <Font name="System Bold" size="12.0" />
+                                       </font>
+                                    </Text>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Chambre Pour: Homme" />
+                                 </children>
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                                 <padding>
+                                    <Insets bottom="3.0" left="7.0" right="7.0" top="3.0" />
+                                 </padding></VBox>
+                              <VBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="272.0">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de lits:" />
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Places Totales" />
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Places Libres:" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="3.0" left="7.0" right="7.0" top="3.0" />
+                                 </padding>
+                              </VBox>
+                              <VBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="272.0">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Prix: 00,000 CFA/Mois" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="3.0" left="7.0" right="7.0" top="3.0" />
+                                 </padding>
+                              </VBox>
+                           </children>
+                           <padding>
+                              <Insets bottom="4.0" left="5.0" right="5.0" top="4.0" />
+                           </padding>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </VBox>
+   </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
+</HBox>
